<resources>
    <string name="app_name">Cam Folder</string>
    <string name="save_media_of_this_session_to">Save Media of This Session to...</string>
    <string name="today_s_date_folder">Today\'s Date Folder</string>
    <string name="gallery">Gallery</string>
    <string name="new_folder">New Folder</string>
    <string name="preview">Preview</string>
    <string name="folders">Folders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_gallery_folder">Empty gallery folder</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="upload_to_drive">Upload To Drive</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
</resources>