<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextureView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:keepScreenOn="true"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/flash"
        app:layout_constraintBottom_toTopOf="@id/capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

<!--    <SurfaceView-->
<!--        android:id="@+id/videoSurfaceView"-->
<!--        android:layout_width="0d"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/flash"-->
<!--        app:layout_constraintBottom_toTopOf="@id/capture"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:visibility="gone" />-->



    <TextView
        android:id="@+id/toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_circle"
        android:fontFamily="@font/inter_semi_bold"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <androidx.camera.view.ScreenFlashView-->
<!--        android:id="@+id/screenFlashView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/previewView"
        app:layout_constraintBottom_toBottomOf="@id/previewView"
        app:layout_constraintStart_toStartOf="@id/previewView"
        app:layout_constraintEnd_toEndOf="@id/previewView">

        <ImageView
            android:id="@+id/focus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_focus"
            android:visibility="gone"
            app:tint="@color/white" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/chooseFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/ic_circle"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@mipmap/ic_folder_2" />

    </LinearLayout>


    <ImageView
        android:id="@+id/flash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_flash_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/modeSwitch"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:contentDescription="@string/app_name"-->
<!--        android:src="@mipmap/ic_camera_mode"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/capture"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/capture"-->
<!--        app:tint="@color/white" />-->

    <ImageView
        android:id="@+id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/camera_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/capture"
        app:layout_constraintBottom_toBottomOf="@id/capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/cameraSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/camera_switch"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@id/capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/capture" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mediaPreview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:visibility="invisible"
        app:cardCornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="@id/capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/capture">

        <ImageView
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/photoClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:textColor="@color/camera_folder_color"
        android:textSize="@dimen/_13sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/capture"
        app:layout_constraintEnd_toEndOf="@id/capture"
        app:layout_constraintTop_toBottomOf="@id/previewView"/>

    <TextView
        android:id="@+id/videoClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toLeftOf="@id/photoClick"
        app:layout_constraintTop_toBottomOf="@id/previewView"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/duration_background"
        android:paddingHorizontal="15dp"
        android:paddingVertical="2dp"
        android:textColor="#fff"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/front_flash_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8CFFFFFF"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:visibility="visible"
       >
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/pathUi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_background"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/save_media_of_this_session_to"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/foldersParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/today"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    android:visibility="gone"
                    android:background="@drawable/option_background"
                    android:backgroundTint="@color/camera_folder_color"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:text="@string/today_s_date_folder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/newFolder"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/camera_box_background"
                    android:backgroundTint="@color/camera_folder_color"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:hint="+ Create New Folder"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:id="@+id/cameraRoll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/camera_box_background"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:text="@string/camera_roll"
                    android:textColor="@color/camera_folder_color"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/camera_box_background"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@color/camera_folder_color"
                    android:textSize="@dimen/_16sp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/camera_box_background">

                    <TextView
                        android:id="@+id/uploadToDrive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_to_drive"
                        android:textColor="@color/camera_folder_color"
                        android:textSize="@dimen/_16sp"
                        android:gravity="center"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/inter_semi_bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:drawableStart="@drawable/drive"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>